kubernetes/tier-backend-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-api-green
spec:
  selector:
    matchLabels:
      app: envoy-api-green
  template:
    metadata:
      labels:
        app: envoy-api-green
    spec:
      containers:
        - name: envoy-api-green-image
          image: ayamaruyama/envoy-test-green:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-api-green-service
spec:
  clusterIP: None
  selector:
    app: envoy-api-green
  ports:
    - name: headless
      port: 81
      protocol: TCP
