kubernetes/tier-packed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-api-packed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-api-packed
  template:
    metadata:
      labels:
        app: envoy-api-packed
    spec:
      containers:
        - name: envoy-api-proxy
          image: envoyproxy/envoy:latest
          command:
            - /usr/local/bin/envoy
          args:
            - --config-path /etc/envoy/envoy.yaml
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy
          ports:
            - containerPort: 8000
              name: listener
            - containerPort: 8001
              name: admin
        - name: envoy-api-blue
          image: ayamaruyama/envoy-test-blue:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
          ports:
            - containerPort: 5000
        - name: envoy-api-green
          image: ayamaruyama/envoy-test-green:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
          ports:
            - containerPort: 4000
      volumes:
        - name: envoy-config
          configMap:
            name: envoy-api-proxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-api-port-binding
spec:
  selector:
    app: envoy-api-packed
  type: NodePort
  ports:
    - port: 3000
      targetPort: 8000
      nodePort: 30101 # KindのExtraportmappingに合わせる必要がある
